--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>FIRST Alumni Club</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.hero {
+			background: linear-gradient(90deg, #007bff 0%, #6610f2 100%);
+			color: white;
+			padding: 80px 0;
+		}
+		.navbar-brand {
+			font-weight: bold;
+			letter-spacing: 1px;
+		}
+		.section-title {
+			margin-bottom: 30px;
+		}
+		.event-card {
+			min-height: 180px;
+		}
+	</style>
+</head>
+<body>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<div class="container">
+			<a class="navbar-brand" href="#">FIRST Alumni Club</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="#events">Events</a></li>
+					<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Hero Section -->
+	<section class="hero text-center">
+		<div class="container">
+			<h1 class="display-4">Welcome to the FIRST Alumni Club</h1>
+			<p class="lead">Connecting, inspiring, and empowering FIRST alumni across BeNeLux.</p>
+			<a href="#about" class="btn btn-light btn-lg mt-3">Learn More</a>
+		</div>
+	</section>
+
+	<!-- About Section -->
+	<section id="about" class="py-5">
+		<div class="container">
+			<h2 class="section-title text-center">About Us</h2>
+			<div class="row justify-content-center">
+				<div class="col-md-8">
+					<p>
+						The FIRST Alumni Club is a vibrant community of former participants in FIRST robotics programs. We foster lifelong connections, professional growth, and opportunities to give back to the STEM community. Whether you were part of FLL, FTC, or FRC, join us to stay engaged and make a difference!
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Events Section -->
+	<section id="events" class="py-5 bg-light">
+		<div class="container">
+			<h2 class="section-title text-center">Upcoming Events</h2>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card event-card mb-4">
+						<div class="card-body">
+							<h5 class="card-title">Alumni Meetup</h5>
+							<p class="card-text">Join us for our annual alumni meetup in Amsterdam. Network, share stories, and reconnect!</p>
+							<p class="text-muted">Date: September 15, 2025</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card event-card mb-4">
+						<div class="card-body">
+							<h5 class="card-title">Mentorship Program Launch</h5>
+							<p class="card-text">Become a mentor for current FIRST teams and help inspire the next generation of innovators.</p>
+							<p class="text-muted">Date: October 10, 2025</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card event-card mb-4">
+						<div class="card-body">
+							<h5 class="card-title">Tech Talk Series</h5>
+							<p class="card-text">Monthly webinars featuring alumni speakers on STEM careers and technology trends.</p>
+							<p class="text-muted">Next: August 28, 2025</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Contact Section -->
+	<section id="contact" class="py-5">
+		<div class="container">
+			<h2 class="section-title text-center">Contact Us</h2>
+			<div class="row justify-content-center">
+				<div class="col-md-1 justify-content-center">
+					<a href="mailto:firstbeneluxalumni@gmail.com" class="btn btn-primary btn-block">Email Us</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer class="bg-primary text-white text-center py-3">
+		<div class="container">
+			<small>&copy; 2025 FIRST Alumni Club BeNeLux. All rights reserved.</small>
+		</div>
+	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
